// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextMenu should render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ContextMenu
    isOpen={false}
    menuTopAdjustment={98}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Fade
          isHidden={true}
        >
          <div
            className="jsx-1455065717 jsx-2010396083 application-veil"
          />
        </Fade>,
        <VanillaButton
          handleClick={[Function]}
          theme={
            Object {
              "backgroundColor": "#253446",
              "height": "100px",
              "position": "relative",
              "width": "100px",
              "zIndex": "10",
            }
          }
        >
          <div
            className="jsx-1455065717 jsx-2010396083 dots-container"
          >
            <Dots
              height={4}
              theme={
                Object {
                  "circleColor": "white",
                }
              }
              width={18}
            />
          </div>
        </VanillaButton>,
        <div
          className="jsx-1455065717 jsx-2010396083 menu-container"
          style={
            Object {
              "right": "-440px",
            }
          }
        >
          <div
            className="jsx-1455065717 jsx-2010396083 header-container"
          >
            <h5
              className="jsx-1455065717 jsx-2010396083 context-header"
            />
            <p
              className="jsx-1455065717 jsx-2010396083 available-sections"
            >
              ( 
               )
            </p>
          </div>
          <Menu
            list={undefined}
          />
        </div>,
        <JSXStyle
          css={
            Array [
              ".root.jsx-1455065717{width:100px;overflow:hidden;}",
              ".dots-container.jsx-1455065717{margin:0 auto;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:space-evenly;-webkit-justify-content:space-evenly;-ms-flex-pack:space-evenly;justify-content:space-evenly;border-radius:50%;width:52px;height:52px;background-color:#41566f;}",
              ".menu-container.jsx-1455065717{position:absolute;padding:0;margin:0;width:440px;height:100%;background-color:#f8f8f8;-webkit-transition:right ease-out 0.15s;transition:right ease-out 0.15s;}",
              ".header-container.jsx-1455065717{box-shadow: 8px 5px 20px -5px rgba(88, 88, 88, 0.5); margin:0;padding:40px;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;color:#415671;background-color:white;}",
              ".context-header.jsx-1455065717{margin:0;padding:0;font-family:brandon-grotesque, sans-serif;font-size:12px;text-transform:uppercase;-webkit-letter-spacing:1.5px;-moz-letter-spacing:1.5px;-ms-letter-spacing:1.5px;letter-spacing:1.5px;font-weight:800;}",
              ".available-sections.jsx-1455065717{margin:0;padding:0;font-family:brandon-grotesque, sans-serif;font-size:12px;}",
            ]
          }
          styleId="1455065717"
        />,
        <JSXStyle
          css={
            Array [
              ".menu-container.__jsx-style-dynamic-selector{top:98px;}",
              ".application-veil.__jsx-style-dynamic-selector{width:100vw;height:100%;position:absolute;top:98px;left:0;background-color:rgba(0,0,0,0.5);pointer-events:none;}",
            ]
          }
          dynamic={
            Array [
              98,
              98,
            ]
          }
          styleId="626030134"
        />,
      ],
      "className": "jsx-1455065717 jsx-2010396083 root",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <div
            className="jsx-1455065717 jsx-2010396083 application-veil"
          />,
          "isHidden": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "jsx-1455065717 jsx-2010396083 application-veil",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <div
            className="jsx-1455065717 jsx-2010396083 dots-container"
          >
            <Dots
              height={4}
              theme={
                Object {
                  "circleColor": "white",
                }
              }
              width={18}
            />
          </div>,
          "handleClick": [Function],
          "theme": Object {
            "backgroundColor": "#253446",
            "height": "100px",
            "position": "relative",
            "width": "100px",
            "zIndex": "10",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Dots
              height={4}
              theme={
                Object {
                  "circleColor": "white",
                }
              }
              width={18}
            />,
            "className": "jsx-1455065717 jsx-2010396083 dots-container",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 4,
              "theme": Object {
                "circleColor": "white",
              },
              "width": 18,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="jsx-1455065717 jsx-2010396083 header-container"
            >
              <h5
                className="jsx-1455065717 jsx-2010396083 context-header"
              />
              <p
                className="jsx-1455065717 jsx-2010396083 available-sections"
              >
                ( 
                 )
              </p>
            </div>,
            <Menu
              list={undefined}
            />,
          ],
          "className": "jsx-1455065717 jsx-2010396083 menu-container",
          "style": Object {
            "right": "-440px",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h5
                  className="jsx-1455065717 jsx-2010396083 context-header"
                />,
                <p
                  className="jsx-1455065717 jsx-2010396083 available-sections"
                >
                  ( 
                   )
                </p>,
              ],
              "className": "jsx-1455065717 jsx-2010396083 header-container",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                  "className": "jsx-1455065717 jsx-2010396083 context-header",
                },
                "ref": null,
                "rendered": null,
                "type": "h5",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "( ",
                    undefined,
                    " )",
                  ],
                  "className": "jsx-1455065717 jsx-2010396083 available-sections",
                },
                "ref": null,
                "rendered": Array [
                  "( ",
                  undefined,
                  " )",
                ],
                "type": "p",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "list": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "css": Array [
            ".root.jsx-1455065717{width:100px;overflow:hidden;}",
            ".dots-container.jsx-1455065717{margin:0 auto;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:space-evenly;-webkit-justify-content:space-evenly;-ms-flex-pack:space-evenly;justify-content:space-evenly;border-radius:50%;width:52px;height:52px;background-color:#41566f;}",
            ".menu-container.jsx-1455065717{position:absolute;padding:0;margin:0;width:440px;height:100%;background-color:#f8f8f8;-webkit-transition:right ease-out 0.15s;transition:right ease-out 0.15s;}",
            ".header-container.jsx-1455065717{box-shadow: 8px 5px 20px -5px rgba(88, 88, 88, 0.5); margin:0;padding:40px;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;color:#415671;background-color:white;}",
            ".context-header.jsx-1455065717{margin:0;padding:0;font-family:brandon-grotesque, sans-serif;font-size:12px;text-transform:uppercase;-webkit-letter-spacing:1.5px;-moz-letter-spacing:1.5px;-ms-letter-spacing:1.5px;letter-spacing:1.5px;font-weight:800;}",
            ".available-sections.jsx-1455065717{margin:0;padding:0;font-family:brandon-grotesque, sans-serif;font-size:12px;}",
          ],
          "styleId": "1455065717",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "css": Array [
            ".menu-container.__jsx-style-dynamic-selector{top:98px;}",
            ".application-veil.__jsx-style-dynamic-selector{width:100vw;height:100%;position:absolute;top:98px;left:0;background-color:rgba(0,0,0,0.5);pointer-events:none;}",
          ],
          "dynamic": Array [
            98,
            98,
          ],
          "styleId": "626030134",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Fade
            isHidden={true}
          >
            <div
              className="jsx-1455065717 jsx-2010396083 application-veil"
            />
          </Fade>,
          <VanillaButton
            handleClick={[Function]}
            theme={
              Object {
                "backgroundColor": "#253446",
                "height": "100px",
                "position": "relative",
                "width": "100px",
                "zIndex": "10",
              }
            }
          >
            <div
              className="jsx-1455065717 jsx-2010396083 dots-container"
            >
              <Dots
                height={4}
                theme={
                  Object {
                    "circleColor": "white",
                  }
                }
                width={18}
              />
            </div>
          </VanillaButton>,
          <div
            className="jsx-1455065717 jsx-2010396083 menu-container"
            style={
              Object {
                "right": "-440px",
              }
            }
          >
            <div
              className="jsx-1455065717 jsx-2010396083 header-container"
            >
              <h5
                className="jsx-1455065717 jsx-2010396083 context-header"
              />
              <p
                className="jsx-1455065717 jsx-2010396083 available-sections"
              >
                ( 
                 )
              </p>
            </div>
            <Menu
              list={undefined}
            />
          </div>,
          <JSXStyle
            css={
              Array [
                ".root.jsx-1455065717{width:100px;overflow:hidden;}",
                ".dots-container.jsx-1455065717{margin:0 auto;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:space-evenly;-webkit-justify-content:space-evenly;-ms-flex-pack:space-evenly;justify-content:space-evenly;border-radius:50%;width:52px;height:52px;background-color:#41566f;}",
                ".menu-container.jsx-1455065717{position:absolute;padding:0;margin:0;width:440px;height:100%;background-color:#f8f8f8;-webkit-transition:right ease-out 0.15s;transition:right ease-out 0.15s;}",
                ".header-container.jsx-1455065717{box-shadow: 8px 5px 20px -5px rgba(88, 88, 88, 0.5); margin:0;padding:40px;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;color:#415671;background-color:white;}",
                ".context-header.jsx-1455065717{margin:0;padding:0;font-family:brandon-grotesque, sans-serif;font-size:12px;text-transform:uppercase;-webkit-letter-spacing:1.5px;-moz-letter-spacing:1.5px;-ms-letter-spacing:1.5px;letter-spacing:1.5px;font-weight:800;}",
                ".available-sections.jsx-1455065717{margin:0;padding:0;font-family:brandon-grotesque, sans-serif;font-size:12px;}",
              ]
            }
            styleId="1455065717"
          />,
          <JSXStyle
            css={
              Array [
                ".menu-container.__jsx-style-dynamic-selector{top:98px;}",
                ".application-veil.__jsx-style-dynamic-selector{width:100vw;height:100%;position:absolute;top:98px;left:0;background-color:rgba(0,0,0,0.5);pointer-events:none;}",
              ]
            }
            dynamic={
              Array [
                98,
                98,
              ]
            }
            styleId="626030134"
          />,
        ],
        "className": "jsx-1455065717 jsx-2010396083 root",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <div
              className="jsx-1455065717 jsx-2010396083 application-veil"
            />,
            "isHidden": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "jsx-1455065717 jsx-2010396083 application-veil",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <div
              className="jsx-1455065717 jsx-2010396083 dots-container"
            >
              <Dots
                height={4}
                theme={
                  Object {
                    "circleColor": "white",
                  }
                }
                width={18}
              />
            </div>,
            "handleClick": [Function],
            "theme": Object {
              "backgroundColor": "#253446",
              "height": "100px",
              "position": "relative",
              "width": "100px",
              "zIndex": "10",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Dots
                height={4}
                theme={
                  Object {
                    "circleColor": "white",
                  }
                }
                width={18}
              />,
              "className": "jsx-1455065717 jsx-2010396083 dots-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "height": 4,
                "theme": Object {
                  "circleColor": "white",
                },
                "width": 18,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="jsx-1455065717 jsx-2010396083 header-container"
              >
                <h5
                  className="jsx-1455065717 jsx-2010396083 context-header"
                />
                <p
                  className="jsx-1455065717 jsx-2010396083 available-sections"
                >
                  ( 
                   )
                </p>
              </div>,
              <Menu
                list={undefined}
              />,
            ],
            "className": "jsx-1455065717 jsx-2010396083 menu-container",
            "style": Object {
              "right": "-440px",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h5
                    className="jsx-1455065717 jsx-2010396083 context-header"
                  />,
                  <p
                    className="jsx-1455065717 jsx-2010396083 available-sections"
                  >
                    ( 
                     )
                  </p>,
                ],
                "className": "jsx-1455065717 jsx-2010396083 header-container",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                    "className": "jsx-1455065717 jsx-2010396083 context-header",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "h5",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "( ",
                      undefined,
                      " )",
                    ],
                    "className": "jsx-1455065717 jsx-2010396083 available-sections",
                  },
                  "ref": null,
                  "rendered": Array [
                    "( ",
                    undefined,
                    " )",
                  ],
                  "type": "p",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "list": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "css": Array [
              ".root.jsx-1455065717{width:100px;overflow:hidden;}",
              ".dots-container.jsx-1455065717{margin:0 auto;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:space-evenly;-webkit-justify-content:space-evenly;-ms-flex-pack:space-evenly;justify-content:space-evenly;border-radius:50%;width:52px;height:52px;background-color:#41566f;}",
              ".menu-container.jsx-1455065717{position:absolute;padding:0;margin:0;width:440px;height:100%;background-color:#f8f8f8;-webkit-transition:right ease-out 0.15s;transition:right ease-out 0.15s;}",
              ".header-container.jsx-1455065717{box-shadow: 8px 5px 20px -5px rgba(88, 88, 88, 0.5); margin:0;padding:40px;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;color:#415671;background-color:white;}",
              ".context-header.jsx-1455065717{margin:0;padding:0;font-family:brandon-grotesque, sans-serif;font-size:12px;text-transform:uppercase;-webkit-letter-spacing:1.5px;-moz-letter-spacing:1.5px;-ms-letter-spacing:1.5px;letter-spacing:1.5px;font-weight:800;}",
              ".available-sections.jsx-1455065717{margin:0;padding:0;font-family:brandon-grotesque, sans-serif;font-size:12px;}",
            ],
            "styleId": "1455065717",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "css": Array [
              ".menu-container.__jsx-style-dynamic-selector{top:98px;}",
              ".application-veil.__jsx-style-dynamic-selector{width:100vw;height:100%;position:absolute;top:98px;left:0;background-color:rgba(0,0,0,0.5);pointer-events:none;}",
            ],
            "dynamic": Array [
              98,
              98,
            ],
            "styleId": "626030134",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Menu should render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Menu
    list={
      Array [
        Object {
          "linkURL": "#",
          "title": "foo",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        Array [
          <MenuItem
            linkURL="#"
            title="foo"
          />,
        ],
        <JSXStyle
          css={
            Array [
              ".menu-list.jsx-3731609075{margin:0;padding:0;padding-top:10px;}",
            ]
          }
          styleId="3731609075"
        />,
      ],
      "className": "jsx-3731609075 menu-list",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "context-menu-foo",
        "nodeType": "function",
        "props": Object {
          "linkURL": "#",
          "title": "foo",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "css": Array [
            ".menu-list.jsx-3731609075{margin:0;padding:0;padding-top:10px;}",
          ],
          "styleId": "3731609075",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "ol",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          Array [
            <MenuItem
              linkURL="#"
              title="foo"
            />,
          ],
          <JSXStyle
            css={
              Array [
                ".menu-list.jsx-3731609075{margin:0;padding:0;padding-top:10px;}",
              ]
            }
            styleId="3731609075"
          />,
        ],
        "className": "jsx-3731609075 menu-list",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "context-menu-foo",
          "nodeType": "function",
          "props": Object {
            "linkURL": "#",
            "title": "foo",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "css": Array [
              ".menu-list.jsx-3731609075{margin:0;padding:0;padding-top:10px;}",
            ],
            "styleId": "3731609075",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "ol",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`MenuItem should render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MenuItem />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <li
          className="jsx-3109833365 menu-item"
        >
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={undefined}
          >
            <span
              className="jsx-3109833365 dot-container"
            >
              <MiraDot
                theme={
                  Object {
                    "dimension": 10,
                  }
                }
              />
            </span>
          </Link>
        </li>,
        <JSXStyle
          css={
            Array [
              ".menu-item.jsx-3109833365{position:relative;margin:0;padding:0;margin-left:70px;width:75%;color:#415671;}",
              ".dot-container.jsx-3109833365{position:absolute;left:-50px;top:43px;}",
              ".menu-item.jsx-3109833365 a{display:block;padding-bottom:30px;padding-top:40px;margin-left:-15px;padding-left:20px;font-family:adobe-garamond-pro, serif;border-bottom:1px solid #d9dee5;text-transform:capitalize;-webkit-text-decoration:none;text-decoration:none;color:#415671;}",
              ".menu-item.jsx-3109833365 a .dot-container{opacity:0;}",
              ".menu-item.jsx-3109833365 a.active .dot-container{opacity:1;}",
            ]
          }
          styleId="3109833365"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={undefined}
          >
            <span
              className="jsx-3109833365 dot-container"
            >
              <MiraDot
                theme={
                  Object {
                    "dimension": 10,
                  }
                }
              />
            </span>
          </Link>,
          "className": "jsx-3109833365 menu-item",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeClassName": "active",
            "children": Array [
              <span
                className="jsx-3109833365 dot-container"
              >
                <MiraDot
                  theme={
                    Object {
                      "dimension": 10,
                    }
                  }
                />
              </span>,
              undefined,
            ],
            "onlyActiveOnIndex": false,
            "style": Object {},
            "to": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <MiraDot
                  theme={
                    Object {
                      "dimension": 10,
                    }
                  }
                />,
                "className": "jsx-3109833365 dot-container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "theme": Object {
                    "dimension": 10,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "span",
            },
            undefined,
          ],
          "type": [Function],
        },
        "type": "li",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "css": Array [
            ".menu-item.jsx-3109833365{position:relative;margin:0;padding:0;margin-left:70px;width:75%;color:#415671;}",
            ".dot-container.jsx-3109833365{position:absolute;left:-50px;top:43px;}",
            ".menu-item.jsx-3109833365 a{display:block;padding-bottom:30px;padding-top:40px;margin-left:-15px;padding-left:20px;font-family:adobe-garamond-pro, serif;border-bottom:1px solid #d9dee5;text-transform:capitalize;-webkit-text-decoration:none;text-decoration:none;color:#415671;}",
            ".menu-item.jsx-3109833365 a .dot-container{opacity:0;}",
            ".menu-item.jsx-3109833365 a.active .dot-container{opacity:1;}",
          ],
          "styleId": "3109833365",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <li
            className="jsx-3109833365 menu-item"
          >
            <Link
              activeClassName="active"
              onlyActiveOnIndex={false}
              style={Object {}}
              to={undefined}
            >
              <span
                className="jsx-3109833365 dot-container"
              >
                <MiraDot
                  theme={
                    Object {
                      "dimension": 10,
                    }
                  }
                />
              </span>
            </Link>
          </li>,
          <JSXStyle
            css={
              Array [
                ".menu-item.jsx-3109833365{position:relative;margin:0;padding:0;margin-left:70px;width:75%;color:#415671;}",
                ".dot-container.jsx-3109833365{position:absolute;left:-50px;top:43px;}",
                ".menu-item.jsx-3109833365 a{display:block;padding-bottom:30px;padding-top:40px;margin-left:-15px;padding-left:20px;font-family:adobe-garamond-pro, serif;border-bottom:1px solid #d9dee5;text-transform:capitalize;-webkit-text-decoration:none;text-decoration:none;color:#415671;}",
                ".menu-item.jsx-3109833365 a .dot-container{opacity:0;}",
                ".menu-item.jsx-3109833365 a.active .dot-container{opacity:1;}",
              ]
            }
            styleId="3109833365"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Link
              activeClassName="active"
              onlyActiveOnIndex={false}
              style={Object {}}
              to={undefined}
            >
              <span
                className="jsx-3109833365 dot-container"
              >
                <MiraDot
                  theme={
                    Object {
                      "dimension": 10,
                    }
                  }
                />
              </span>
            </Link>,
            "className": "jsx-3109833365 menu-item",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeClassName": "active",
              "children": Array [
                <span
                  className="jsx-3109833365 dot-container"
                >
                  <MiraDot
                    theme={
                      Object {
                        "dimension": 10,
                      }
                    }
                  />
                </span>,
                undefined,
              ],
              "onlyActiveOnIndex": false,
              "style": Object {},
              "to": undefined,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <MiraDot
                    theme={
                      Object {
                        "dimension": 10,
                      }
                    }
                  />,
                  "className": "jsx-3109833365 dot-container",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "theme": Object {
                      "dimension": 10,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "span",
              },
              undefined,
            ],
            "type": [Function],
          },
          "type": "li",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "css": Array [
              ".menu-item.jsx-3109833365{position:relative;margin:0;padding:0;margin-left:70px;width:75%;color:#415671;}",
              ".dot-container.jsx-3109833365{position:absolute;left:-50px;top:43px;}",
              ".menu-item.jsx-3109833365 a{display:block;padding-bottom:30px;padding-top:40px;margin-left:-15px;padding-left:20px;font-family:adobe-garamond-pro, serif;border-bottom:1px solid #d9dee5;text-transform:capitalize;-webkit-text-decoration:none;text-decoration:none;color:#415671;}",
              ".menu-item.jsx-3109833365 a .dot-container{opacity:0;}",
              ".menu-item.jsx-3109833365 a.active .dot-container{opacity:1;}",
            ],
            "styleId": "3109833365",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
